Code block scrollbar fix, font size bump down

--- a/_scss/_defaults.scss
+++ b/_scss/_defaults.scss
@@ -94,7 +94,7 @@ img {
 }
 
 p, li, blockquote {
-  font-size: 1.2em;
+  font-size: 1.1em;
   line-height: 1.7em;
   -webkit-font-smoothing: antialiased;
   & a {
@@ -132,8 +132,8 @@ pre {
 pre code {
   width: auto;
   display: block;
-  overflow: scroll;
-  word-wrap: normal;
+  white-space: pre-wrap;
+  word-break: keep-all;
   font-size: 1.1em;
   color: #151515;
   margin: 0 auto;
